fix: footer logo overflow

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,5 +7,4 @@ footer {
 
 .Footer-logo {
   opacity: 0.8;
-  height: 15vh;
 }
